--- a/docs/source/assets/styles/layout/_main.sass
+++ b/docs/source/assets/styles/layout/_main.sass
@@ -71,3 +71,7 @@ main
 @media (min-width: 1500px)
   .bd-container__inner.bd-page-width
     max-width: 100rem
+
+  .bd-container__inner.bd-page-width .bd-content,
+    margin-left: 0 !important
+    margin-right: auto !important
